# stubby

./: .gitattributes  .gitignore  .gitmodules  .travis.yml  AUTHORS  CMakeLists.txt  ChangeLog  Dockerfile  Makefile.am  README.md  config.h  configure.ac  stubby-setdns-macos.sh  stubby.conf.example  stubby.yml.example
cmake/include/: cmakeconfig.h.in
cmake/modules/: FindGetdns.cmake  FindLibidn2.cmake
doc/: stubby.1.in
macos/: Makefile.am  org.getdns.stubby.plist  org.getdns.stubbydev.plist  post-install-script.sh  stubby-setdns-macos.sh  stubby-ui-helper.c
osx/: Makefile.am  stubby-setdns-macos.sh  stubby-ui-helper.c
src/: Makefile.am  configfile.c  configfile.h  log.c  log.h  server.c  server.h  stubby.c  util.c  util.h
src/windows/: service.c  service.mc  stubby.rc.in  stubres.c  stubres.rc.in  windowsservice.h
src/yaml/: convert_yaml_to_json.c  convert_yaml_to_json.h
systemd/: README.md  stubby.conf  stubby.service
windows/: README.txt  stubby-32.wxs  stubby-32.wxs.in  stubby-64.wxs  stubby-64.wxs.in  stubby-feature.wxs  stubby.bat  stubby.xml  stubby64.wxs  stubby_resetdns_windows.ps1  stubby_setdns_windows.ps1
windows/windowspkg/StubbyPkg/StubbyPkg/: Product.wxs  StubbyPkg.wixproj
